--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -23,10 +23,10 @@
  * and introducing objects and abstractions is as simple as switching the
  * following variables to `true`.
  */
-$use-grids:         false;
+$use-grids:         true;
 $use-flexbox:       false;
 $use-columns:       false;
-$use-nav:           false;
+$use-nav:           true;
 $use-options:       false;
 $use-pagination:    false;
 $use-breadcrumb:    false;
@@ -42,10 +42,10 @@ $use-flyout:        false;
 $use-arrows:        false;
 $use-sprite:        false;
 $use-icon-text:     false;
-$use-beautons:      false;
+$use-beautons:      true;
 $use-lozenges:      false;
 $use-rules:         false;
-$use-stats:         false;
+$use-stats:         true;
 $use-greybox:       false;
 
 
@@ -60,7 +60,7 @@ $use-greybox:       false;
  */
 
 
-
+$global-border-box: false!default;
 
 
 /*------------------------------------*\
