--- a/css/style.scss
+++ b/css/style.scss
@@ -25,4 +25,10 @@
  * She’s all yours, cap’n... Begin importing your stuff here.
  */
 //@import "ui/example";
+@import "theme/objects/base-overrides";
+@import "theme/objects/app";
+@import "theme/objects/buttons";
 @import "theme/objects/map";
+@import "theme/objects/maptool";
+@import "theme/objects/features";
+
