Fixes #1 adding layer grouping

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -66,3 +66,5 @@ $use-greybox:       false;
 /**
  * Place any of your own variables that sit on top of inuit.css here.
  */
+$silver: #ccc;
+$ltsilver: #dadada;
