reworked the config so that all published layers from geoserver are pulled through onto the client interface

--- a/css/theme/objects/_app.scss
+++ b/css/theme/objects/_app.scss
@@ -1,15 +1,53 @@
 .app {
 	position: relative;
+	overflow: hidden;
 	width: 100%;
 }
 	.app__sidebar {
-		float: left;
-		position: relative;
+		background: #ffffff;
+		border-right: 1px solid $ltsilver;
+		height: 100%;
+		left: -25%;
+		padding: $half-spacing-unit $half-spacing-unit/2 0 0;
+		position: absolute;
+		top: 0;
 		width: 25%;
+		z-index: 9999;
+
+		@include vendor(transition, left .2s ease-in);
+
+		.action {
+			background-color: #ffffff;
+			background-image: url('../img/drawer.png');
+			background-position: $half-spacing-unit*.75 center;
+			background-repeat: no-repeat;
+			border-right: 1px solid $ltsilver;
+			border-left: 0;
+			cursor: pointer;
+			height: $base-spacing-unit*1.5;
+			position: absolute;
+			right: $half-spacing-unit*-1.5;
+			top: 45%;
+			width: $base-spacing-unit*1.5;
+
+			@include vendor(border-radius, 50%);
+		}
+
+		&.active {
+			left: 0;	
+
+			.action {
+				background-image: url('../img/drawer--close.png');
+				background-position: center center;
+			}
+		}
 	}
 
 	.app__main {
 		float: left;
 		position: relative;
-		width: 75%;
+		width: 100%;
+		background-image: url(../img/loading.gif);
+		background-position: center center;
+		background-repeat: no-repeat;
 	}
