--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,9 @@
  * She’s all yours, cap’n... Begin importing your stuff here.
  */
 //@import "ui/example";
+@import "theme/lib/base";
+
+
 @import "theme/objects/base-overrides";
 @import "theme/objects/app";
 @import "theme/objects/buttons";
@@ -28,5 +31,6 @@
 @import "theme/objects/maptool";
 @import "theme/objects/features";
 @import "theme/objects/layer-controls";
+@import "theme/objects/address-search";
 @import "theme/objects/js-accordion";
 
