SLDs are now retrived from Geoserver as long as theyre named the same as the layer. Adding layer grouping based on a single keyword against each layer

--- a/css/theme/objects/_layer-controls.scss
+++ b/css/theme/objects/_layer-controls.scss
@@ -39,7 +39,14 @@
 
 			> li {
 				line-height: 1;
-				margin: .15em 0;
+				padding: .5em 0;
+				border-bottom: 1px solid transparent;
+				border-top: 1px solid transparent;
+				&:hover {
+					border-bottom:1px solid $ltsilver;
+					border-top:1px solid $ltsilver;
+
+				}
 			}
 		}	
 	}
