--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,7 @@
 @import "theme/objects/maptool";
 @import "theme/objects/features";
 @import "theme/objects/layer-controls";
+@import "theme/objects/layer-control";
 @import "theme/objects/address-search";
 @import "theme/objects/js-accordion";
 
