converting the hex colour change routine to return rgba so that the colours now represent the correct value for the layer

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,5 +33,6 @@
 @import "theme/objects/layer-controls";
 @import "theme/objects/layer-control";
 @import "theme/objects/address-search";
+@import "theme/objects/stats";
 @import "theme/objects/js-accordion";
 
