--- a/css/theme/objects/_layer-control.scss
+++ b/css/theme/objects/_layer-control.scss
@@ -1,3 +1,10 @@
 .layer-toggle {
 	float: right;
 }
+.layer-toggle__key {
+	border-width: 1px;
+	border-style: solid;
+	float: left;
+	height: 1em;
+	width: 1em;
+}
