--- a/css/theme/objects/_maptool.scss
+++ b/css/theme/objects/_maptool.scss
@@ -14,6 +14,14 @@
 	}
 }
 
+.measuring-tool {
+	@include vendor(box-shadow, 0px 1px 10px #333);
+	@include vendor(transition, .2s);
+	&:active {
+		@include vendor(box-shadow, 0px 0px 0px #aaa);
+	}
+}
+
 	.btn--maptool {
 		@extend .btn;
 
