--- a/css/theme/objects/_address-search.scss
+++ b/css/theme/objects/_address-search.scss
@@ -1,5 +1,5 @@
 form.address-search {
-
+	background: #ffffff;
 	border: 1px solid $ltsilver;
 	padding: $half-spacing-unit/4 $half-spacing-unit/2;
 	position: relative;
