--- a/css/theme/objects/_js-accordion.scss
+++ b/css/theme/objects/_js-accordion.scss
@@ -4,7 +4,7 @@
 		max-height: 0;
 		height: auto;
 		overflow: hidden;
-		@include vendor(transition, max-height .3s ease-in);
+		@include vendor(transition, .3s);
 	}
 
 	&.active {
